cmake_minimum_required(VERSION 3.17)
project(dust)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
find_package (OpenGL REQUIRED)
set(CMAKE_CXX_STANDARD 17)
add_executable(dust Dust.cpp Dust.h Renderer.cpp Renderer.h Element.cpp Element.h Physics.h Logger.h Logger.cpp)
set(glfwIncDir "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glfw/include")
set(glfwLib "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glfw/lib-vc2017/glfw3.lib")
set(glewIncDir "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glew/include")
set(glewLib "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glew/lib/Release/Win32/glew32s.lib")
set(eigenIncDir "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/Eigen/src")
#set(catchIncDir "${CMAKE_CURRENT_SOURCE_DIR}/dependencies/catch")
include_directories(${glfwIncDir} ${glewIncDir} ${eigenIncDir} )
target_include_directories( dust PRIVATE glfwIncDir glewIncDir eigenIncDir )
target_link_libraries( dust PRIVATE ${glfwLib} ${glewLib} openGL32)
